--- a/src/app/Components/Venue Location/venue-location/venue-location.component.html
+++ b/src/app/Components/Venue Location/venue-location/venue-location.component.html
@@ -218,7 +218,7 @@
               </div>
               <div class="col-lg-6 col-md-6">
                 <div class="form-group ">
-                  <label>Availability</label>
+                  <label>Availability Days</label>
                   <input type="text" appNotAllowSepacialChatactor class="form-control" placeholder="Availability"
                     formControlName="availability" [ngClass]="{'is-invalid': venueLocationForm.get('availability').errors 
                   && (venueLocationForm.get('availability').touched||venueLocationSubmitted)}">
