--- a/src/app/Components/Experts/expert-upload-doc/expert-upload-doc.component.html
+++ b/src/app/Components/Experts/expert-upload-doc/expert-upload-doc.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-12 col-sm-12 text-right">
-    <button class="btn icon-40 icon-circle align-self-start bg-success text-white" (click)="addUpload()"><i
+    <button class="btn btn-sm primary-gradient mr-2" (click)="addUpload()"><i
         class="material-icons">add</i></button>
   </div>
 </div>
