--- a/src/app/Components/Instruction Main/instruction-list/instruction-list.component.html
+++ b/src/app/Components/Instruction Main/instruction-list/instruction-list.component.html
@@ -1,3 +1,75 @@
-<p>
-  instruction-list works!
-</p>
+<div class="container-fluid bg-light-opac">
+  <div class="row">
+      <div class="container my-3 main-container">
+          <div class="row align-items-center">
+              <div class="col">
+                  <h2 class="content-color-primary page-title">Instructions</h2>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="container mt-4 main-container">
+  <div class="row">
+      <div class="col-sm-12 col-md-12">
+          <div class="card rounded-0 border-0 mb-3">
+              <div class="card-header">
+                  <div class="row">
+                      <div class="col-8">
+                          <h5 class="card-title mb-0">List</h5>
+                      </div>
+                      <div class="col text-right">
+                          <div class="dropdown">
+                              <button class="btn btn-link btn-sm text-secondary rounded-0 dropdown-toggle float-right icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" type="button">
+                                  <i class="fa fa-ellipsis-v"></i>
+                              </button>
+                              <div class="dropdown-menu dropdown-menu-right">
+                                  <a class="dropdown-item" href="#">
+                                      <i class="fa fa-exclamation-circle text-secondary"></i> Report</a>
+                                  <a class="dropdown-item" href="#">
+                                      <i class="fa fa-cog text-secondary"></i> Settings</a>
+                                  <a class="dropdown-item" href="#">
+                                      <i class="fa fa-trash text-secondary"></i> Remove</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="card-body">
+                  <table class="table">
+                      <thead>
+                          <tr>
+                              <th scope="col">Sr.#</th>
+                              <th scope="col">First Name</th>
+                              <th scope="col">Last Name</th>
+                              <th scope="col">Occupation</th>
+                              <th scope="col">Gender</th>
+                              <th scope="col">DOB</th>
+                              <th scope="col">Mobile Number</th>
+                              <th scope="col">Post Code</th>
+                              <th scope="col">Actions</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr *ngFor="let item of instructions; let i=index;">
+                              <th scope="row">{{i+1}}</th>
+                              <td>{{item.firstName}}</td>
+                              <td>{{item.lastName}}</td>
+                              <td>{{item.occupationID}}</td>
+                              <td>{{item.gender}}</td>
+                              <td>{{item.dob | date:'mediumDate'}}</td>
+                              <td>{{item.mobileNumber}}</td>
+                              <td>{{item.postCode}}</td>
+                              <td>
+                                <button class="btn btn-sm primary-gradient mr-2">Details</button>
+                                <button class="btn btn-sm danger-gradient mr-2">Delete</button>
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
