--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -146,7 +146,10 @@
                 <li class="nav-item">
                     <a routerLink="/IndoxCMS/Intruction/NewInstruction" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>New
-                            Instructions</span></a>
+                            Instruction</span></a>
+                            <a routerLink="/IndoxCMS/Intruction/List" class="nav-link pink-gradient-active"><i
+                                class="material-icons icon"></i><span>
+                                Instructions</span></a>
                     <a routerLink="/MedcoCMS/DNA_List" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>DNA List</span></a>
                     <a routerLink="/MedcoCMS/DNA_History" class="nav-link pink-gradient-active"><i
