--- a/src/app/Components/Experts/expert-bank-charges/expert-bank-charges.component.html
+++ b/src/app/Components/Experts/expert-bank-charges/expert-bank-charges.component.html
@@ -6,7 +6,7 @@
   </div>
  
   <div class="col-lg-12 col-md-12">
-    <form [formGroup]="bankDetailForm" *ngIf="bankDetailForm" (ngSubmit)="saveBankDetail()">
+    <form [formGroup]="bankDetailForm" *ngIf="bankDetailForm">
       <table class="table">
         <thead>
           <tr>
@@ -75,7 +75,7 @@
               <td>{{group.get('sortCode').value}}</td>
               <td>
                 <button type="button" class="btn pink-gradient px-3 btn-sm mr-1" (click)="editBankDetail(group)">Edit</button>
-                <button type="button" class="btn btn-danger px-3 btn-sm">Delete</button>
+                <button type="button" class="btn btn-danger px-3 btn-sm" (click)="deleteBankDetail(group.get('id').value)">Delete</button>
               </td>
             </tr>     
         </ng-container>
