--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -54,10 +54,12 @@
 
                     <a routerLink="/Experts/drafts" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>Draft Profile's</span></a>
-                    <!-- <a routerLink="/Experts/sla" class="nav-link pink-gradient-active"><i
-                            class="material-icons icon"></i><span>
-                                SLA
-                            </span></a> -->
+                    <a routerLink="/Experts/clinicplan" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i>
+                        <span>
+                            Add Clinic Plan
+                        </span>
+                    </a>
                     <a routerLink="/Experts/Medco_Expert_Clinics" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>
                             Clinics</span></a>
@@ -147,9 +149,9 @@
                     <a routerLink="/IndoxCMS/Intruction/NewInstruction" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>New
                             Instruction</span></a>
-                            <a routerLink="/IndoxCMS/Intruction/List" class="nav-link pink-gradient-active"><i
-                                class="material-icons icon"></i><span>
-                                Instructions</span></a>
+                    <a routerLink="/IndoxCMS/Intruction/List" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i><span>
+                            Instructions</span></a>
                     <a routerLink="/MedcoCMS/DNA_List" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>DNA List</span></a>
                     <a routerLink="/MedcoCMS/DNA_History" class="nav-link pink-gradient-active"><i
