--- a/src/app/Components/Experts/expert-charges/expert-charges.component.html
+++ b/src/app/Components/Experts/expert-charges/expert-charges.component.html
@@ -1,7 +1,8 @@
-<form [formGroup]="chargesForm" *ngIf="chargesForm" (ngSubmit)="onNextStep()">
+<form [formGroup]="chargesForm" (ngSubmit)="onNextStep()">
   
+  <h4>Charges</h4>
   <div class="row">
-    <div class="col-lg-12 col-md-12">
+    <div class="col-lg-4 col-md-4">
       <div class="form-group ">
         <label>IA Charges</label>
         <input class="form-control" appOnlynumbers="true" formControlName="iaCharges" [ngClass]="{'is-invalid': chargesForm.get('iaCharges').errors 
@@ -11,7 +12,7 @@
           field is required</div>
       </div>
     </div>
-    <div class="col-lg-12 col-md-12">
+    <div class="col-lg-4 col-md-4">
       <div class="form-group ">
         <label>DC Charges</label>
         <input class="form-control" appOnlynumbers="true" formControlName="dcCharges" [ngClass]="{'is-invalid': chargesForm.get('dcCharges').errors 
@@ -21,7 +22,7 @@
           field is required</div>
       </div>
     </div>
-    <div class="col-lg-12 col-md-12">
+    <div class="col-lg-4 col-md-4">
       <div class="form-group ">
         <label>Per Session Charges</label>
         <input class="form-control" appOnlynumbers="true" formControlName="perSessionCharges" [ngClass]="{'is-invalid': chargesForm.get('perSessionCharges').errors 
@@ -32,7 +33,26 @@
       </div>
     </div>
   </div>
-  
+  <h4>Addresss</h4>
+  <div class="row">
+    <div class="col-lg-12 col-md-12">
+      <div class="form-group">
+        <label>Enter address</label>
+        <input type="text" class="form-control" formControlName="mapAddress" [ngClass]="{'is-invalid': chargesForm.get('mapAddress').errors 
+        && (chargesForm.get('mapAddress').touched||submitted)}" (keydown.enter)="$event.preventDefault()" 
+        placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
+        <div class="invalid-feedback"
+          *ngIf="(chargesForm.get('mapAddress').touched||submitted) && chargesForm.get('mapAddress').hasError('required')">
+          This field is required
+        </div>
+
+      </div>
+      <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+        <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
+          (dragEnd)="markerDragEnd($event)"></agm-marker>
+      </agm-map>
+    </div>
+  </div>
   <div class="text-right">
     <button type="submit" (click)="onNextStep()" class="form-continue-btn">
       {{ showButtonLabel() }}
