--- a/src/app/Components/Venue Location/venu-location-detail/venu-location-detail.component.html
+++ b/src/app/Components/Venue Location/venu-location-detail/venu-location-detail.component.html
@@ -66,12 +66,12 @@
               <form [formGroup]="updateLocationForm" (ngSubmit)="saveUpdatedLocation()">
                 <div class="form-group">
                   <label>Enter address</label>
-                  <input type="text" class="form-control" formControlName="enterAddress" (keydown.enter)="$event.preventDefault()"
+                  <input type="text" class="form-control" formControlName="mapAddress" (keydown.enter)="$event.preventDefault()"
                     placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off"
-                    type="text" #search  [ngClass]="{'is-invalid': updateLocationForm.get('enterAddress').errors 
-                    && (updateLocationForm.get('enterAddress').touched)}">
+                    type="text" #search  [ngClass]="{'is-invalid': updateLocationForm.get('mapAddress').errors 
+                    && (updateLocationForm.get('mapAddress').touched)}">
                     <div class="invalid-feedback"
-                    *ngIf="(updateLocationForm.get('enterAddress').touched) && updateLocationForm.get('enterAddress').hasError('required')">
+                    *ngIf="(updateLocationForm.get('mapAddress').touched) && updateLocationForm.get('mapAddress').hasError('required')">
                     This field is required
                   </div>
                 </div>
