--- a/src/app/Components/Venue Location/venue-location-list/venue-location-list.component.html
+++ b/src/app/Components/Venue Location/venue-location-list/venue-location-list.component.html
@@ -45,11 +45,11 @@
                               <th scope="col">Country</th>
                               <th scope="col">County</th>
                               <th scope="col">Town</th>
-                              <th scope="col">Post Code</th>
+                              <th scope="col" width="10%">Post Code</th>
                               <th scope="col">Address</th>
                               <th scope="col">Phone</th>
-                              <th scope="col">Is Active</th>
-                              <th scope="col">Actions</th>
+                              <th scope="col" width="10%">Is Active</th>
+                              <th scope="col" width="15%">Actions</th>
                           </tr>
                       </thead>
                       <tbody>
